--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="content">
     <main class="main">
       <h2>Best Defi for passive earning</h2><hr>
-      <a href="https://biswap.org/?ref=a83c01c9f839492fcfe8" target="_blank"><img src="https://uc42e770b52ebfa7855b18365ba8.previews.dropboxusercontent.com/p/thumb/ABRWhLCpckAwtFZGyfhXBsQjRWRtTLsF1gnWN0YdIOKcnvC7h9oe3TvXRBIsAnBjQzlU5Ew98HnL-h6EMBi_a9o2VkBD6rtx0AS4UWYTp8-JjNYi_NbFoonA7Tx_BjI639qYa3EImaWRHuq2baF7FtD-6qwGrsCD9XLNWD5bRv0nDsH7otmayc50ZgxJGpN_3jUZa2jJUoz0zuA6WZdBxqhu7YR0xsoA178095Lp3AwvUb7bTAP_UcR2o5iPjGodhs7vZGFT4iXX3dHDgXHaF99nmNSPDKCmwG75l-x1BAI0TuUwQ16vEGwN7EjGwyh5AkE3Z_ptoWvxSojpyZu8XSz7cN0U_iif72CPud7eNPq_uQ/p.png" style="width:120px;height:40px;"></a>
+      <a href="https://biswap.org/?ref=a83c01c9f839492fcfe8" target="_blank"><img src="/img/bsw.png" style="width:120px;height:40px;"></a>
       <h5>⇛ Top 5 Defi in BSC chain by Total volume locked (TVL) and number of active users.</h5>
       <h5>⇛ 390+% APY on BSW staking (auto compounding).</h5>
       <h5>⇛ Cheaper fees among defi due to fee return.</h5>
