--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </main>
     <aside class="aside">
       <h2>Top 5 Faucets for crypto earning</h2><hr>
-      <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="https://faucetcrypto.com/banners/468x60.gif" width="468" height="60"></a>
+      <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/img/fc.gif" width="468" height="60"></a>
        <h5>⇰ 20 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls.</h5>
       <h5>⇰ Earn in USD, withdraw in multiple cryptos. Low payout threshold.</h5>
 
       <a href="https://faucetcrypto.com/ref/51422" class="myButton" target="_blank">Join FaucetCrypto</a>
     <hr>
-          <a target="_blank" href="https://firefaucet.win/ref/27478"><img src="https://firefaucet.win/static/images/logo-hd.png" width="468" height="60" style="background-color:grey;"></a>
+          <a target="_blank" href="https://firefaucet.win/ref/27478"><img src="/img/ff.png" width="468" height="60" style="background-color:grey;"></a>
       <h5>⇰ 30 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls, Tasks.</h5>
       <h5>⇰ Earn in USD, withdraw in multiple cryptos. 50%+ earnings on Happy hours.</h5>
 
