--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>Crypto Currency Zone</h1>
   </header>
   	<ul>
-  <li><a class="active" href="#home">Welcome to cryptocurrency zone</a></li>
+  <li><a class="active" href="#home">Welcome to cryptocurrency zone</a><script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
+<coingecko-coin-price-marquee-widget  coin-ids="bitcoin,eos,ethereum,litecoin,ripple,pancake-bunny,pancakeswap-token,biswap,tron" currency="usd" background-color="#d5f6f4" locale="en"></coingecko-coin-price-marquee-widget></li>
 </ul>
   <div class="content">
     <main class="main">
