--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      <h5>⇰ 30 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls, Tasks.</h5>
       <h5>⇰ Earn in USD, withdraw in multiple cryptos. 50%+ earnings on Happy hours.</h5>
 
-      <a href="https://firefaucet.win/ref/27478" class="myButton" target="_blank">Join Firefaucet</a>
+      <a href="https://simplebits.io/ref/n9Z908pvlxST" class="myButton" target="_blank">Join Simplebits</a>
     <hr>
 <a href="https://ref.adbtc.top/7297" target="_blank" border="0"><img src="https://adbtc.top/promo/banner_468x60.jpg"/></a>
 
