--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
       <a href="https://firefaucet.win/ref/27478" class="myButton" target="_blank">Join Firefaucet</a>
     <hr>
+<a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" ><img src="https://dutchycorp.space/banners/Final-auto/DutchyCorp-Final-AutoFaucet-468x60.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="480" height="60"><br>  </a>
+     <h5>⇰ Two 30 min faucet. PTC, shortlinks, Offerwalls, Tasks.</h5>
+      <h5>⇰ 40+ coins.</h5>
+
+      <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="myButton" target="_blank">Join DutchyCorp</a>
+      <hr>
 <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
               <img src="https://simplebits.io/banners/400.gif" width="468" height="60"/></a>
      <h5>⇰ 30 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls, Tasks.</h5>
