--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     <hr>
 <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" ><img src="https://dutchycorp.space/banners/Final-auto/DutchyCorp-Final-AutoFaucet-468x60.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="480" height="60"><br>  </a>
      <h5>⇰ Two 30 min faucet. PTC, shortlinks, Offerwalls, Tasks.</h5>
-      <h5>⇰ 40+ coins.</h5>
+      <h5>⇰ 40+ coins. 20% more rewards on weekends. Multiple payment options.</h5>
 
       <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="myButton" target="_blank">Join DutchyCorp</a>
       <hr>
 <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
               <img src="https://simplebits.io/banners/400.gif" width="468" height="60"/></a>
-     <h5>⇰ 30 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls, Tasks.</h5>
-      <h5>⇰ Earn in USD, withdraw in multiple cryptos. 50%+ earnings on Happy hours.</h5>
+     <h5>⇰ 40 min faucet. PTC, shortlinks, Offerwalls, Tasks.</h5>
+      <h5>⇰ Gamified mining simulation with real earnings.</h5>
 
       <a href="https://simplebits.io/ref/n9Z908pvlxST" class="myButton" target="_blank">Join Simplebits</a>
     <hr>
 <a href="https://ref.adbtc.top/7297" target="_blank" border="0"><img src="https://adbtc.top/promo/banner_468x60.jpg"/></a>
 
-     <h5>⇰ 30 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls, Tasks.</h5>
-      <h5>⇰ Earn in USD, withdraw in multiple cryptos. 50%+ earnings on Happy hours.</h5>
+     <h5>⇰ Highest paying bitcoin PTC.</h5>
+      <h5>⇰ Low withdrawal threshold for Expresscrypto and FaucetPay.</h5>
 
       <a href="https://ref.adbtc.top/7297" class="myButton" target="_blank">Join Adbtc</a>
     <hr>
