--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
       <h5>⇛ Cheaper fees among defi due to fee return.</h5>
       <a href="https://biswap.org/?ref=a83c01c9f839492fcfe8" class="myButton" target="_blank">Goto Biswap</a>
     <hr>
+          <h2>Hot ongoing airdrops!</h2><hr>
+
 
     </main>
     <aside class="aside">
+		<hr>
       <h2>Top 5 Faucets for crypto earning</h2><hr>
       <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/img/fc.gif" width="468" height="60"></a>
        <h5>⇰ 20 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls.</h5>
