--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       <h5>⇛ Cheaper fees among defi due to fee return.</h5>
       <a href="https://biswap.org/?ref=a83c01c9f839492fcfe8" class="myButton" target="_blank">Goto Biswap</a>
     <hr>
-          <h2></h2><hr>
+          <h2>Hot Airdrop</h2><hr>
+          <p><a href="https://bsc.erosswap.finance/?ref=0x23FB8E60A55A75d54c187FbD25717b22f45f708f/">Get Erosswap token worth 0.0045 BNB ($2) within 1 hour</a>
+          <p>Connect your bsc wallet with the airdrop page above and complete few task of joining telegram channel and retweet twitter post.</a>
+
+</p>
+          <p></p>
 
 
     </main>
