--- a/index.html
+++ b/index.html
@@ -6,66 +6,23 @@
 
 <div class="container">
   <header class="header">
-    <h1>Crypto Currency Zone</h1>
+    <h1>Clean Cars Zone</h1>
   </header>
   	<ul>
-  <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
-<coingecko-coin-price-marquee-widget  coin-ids="bitcoin,eos,ethereum,litecoin,ripple,pancake-bunny,pancakeswap-token,biswap,tron" currency="usd" background-color="#d5f6f4" locale="en"></coingecko-coin-price-marquee-widget></li>
 </ul>
   <div class="content">
     <main class="main">
 	    <hr>
-      <h2>Best Defi for passive earning</h2><hr>
-      <a href="https://biswap.org/?ref=a83c01c9f839492fcfe8" target="_blank"><img src="/img/bsw.png" style="width:351px;height:45px;"></a>
-      <h5>⇛ Top 5 Defi in BSC chain by Total volume locked (TVL) and number of active users.</h5>
-      <h5>⇛ 390+% APY on BSW staking (auto compounding).</h5>
-      <h5>⇛ Cheaper fees among defi due to fee return.</h5>
-      <a href="https://biswap.org/?ref=a83c01c9f839492fcfe8" class="myButton" target="_blank">Goto Biswap</a>
-    <hr>
-          <h2>Hot Airdrop</h2><hr>
-          <p><a href="https://bsc.erosswap.finance/?ref=0x23FB8E60A55A75d54c187FbD25717b22f45f708f/">Get Erosswap token worth 0.0045 BNB ($2) within 1 hour</a>
-          <p>Connect your bsc wallet with the airdrop page above and complete few task of joining telegram channel and retweet twitter post.</a>
+      <h2>Recent News</h2><hr>
+      
 
-</p>
-          <p></p>
+       
 
 
     </main>
     <aside class="aside">
 		<hr>
-      <h2>Top 5 Faucets for crypto earning</h2><hr>
-      <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/img/fc.gif" width="468" height="60"></a>
-       <h5>⇰ 20 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls.</h5>
-      <h5>⇰ Earn in USD, withdraw in multiple cryptos. Low payout threshold.</h5>
-
-      <a href="https://faucetcrypto.com/ref/51422" class="myButton" target="_blank">Join FaucetCrypto</a>
-    <hr>
-          <a target="_blank" href="https://firefaucet.win/ref/27478"><img src="/img/ff.png" width="468" height="60" style="background-color:grey;"></a>
-      <h5>⇰ 30 min faucet. Daily login rewards. PTC, shortlinks, Offerwalls, Tasks.</h5>
-      <h5>⇰ Earn in USD, withdraw in multiple cryptos. 50%+ earnings on Happy hours.</h5>
-
-      <a href="https://firefaucet.win/ref/27478" class="myButton" target="_blank">Join Firefaucet</a>
-    <hr>
-<a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" ><img src="https://dutchycorp.space/banners/Final-auto/DutchyCorp-Final-AutoFaucet-468x60.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="480" height="60"><br>  </a>
-     <h5>⇰ Two 30 min faucet. PTC, shortlinks, Offerwalls, Tasks.</h5>
-      <h5>⇰ 40+ coins. 20% more rewards on weekends. Multiple payment options.</h5>
-
-      <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="myButton" target="_blank">Join DutchyCorp</a>
-      <hr>
-<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
-              <img src="https://simplebits.io/banners/400.gif" width="468" height="60"/></a>
-     <h5>⇰ 40 min faucet. PTC, shortlinks, Offerwalls, Tasks.</h5>
-      <h5>⇰ Gamified mining simulation with real earnings.</h5>
-
-      <a href="https://simplebits.io/ref/n9Z908pvlxST" class="myButton" target="_blank">Join Simplebits</a>
-    <hr>
-<a href="https://ref.adbtc.top/7297" target="_blank" border="0"><img src="https://adbtc.top/promo/banner_468x60.jpg"/></a>
-
-     <h5>⇰ Highest paying bitcoin PTC.</h5>
-      <h5>⇰ Low withdrawal threshold for Expresscrypto and FaucetPay.</h5>
-
-      <a href="https://ref.adbtc.top/7297" class="myButton" target="_blank">Join Adbtc</a>
-    <hr>
+      <h2>Top Stories</h2><hr>
         </aside>
   </div>
   <footer class="footer">
