--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
 <div class="container">
   <header class="header">
-    <h1>Clean Cars Zone</h1>
+    <h1>Cryptocurrency Zone</h1>
   </header>
   	<ul>
 </ul>
   <div class="content">
     <main class="main">
 	    <hr>
-      <h2>Recent News</h2><hr>
+      <h2>Hot news</h2><hr>
       
 
        
@@ -22,7 +22,7 @@
     </main>
     <aside class="aside">
 		<hr>
-      <h2>Top Stories</h2><hr>
+      <h2>Top 10 Faucets</h2><hr>
         </aside>
   </div>
   <footer class="footer">
