--- a/index.html
+++ b/index.html
@@ -1,34 +1,50 @@
-<!DOCTYPE html>
-<html>
-	<head> <link rel="stylesheet" href="styles.css">
-  <title>CCZ.one</title>
-</head><body>
-
+<h1 class="title">Best Crypto Faucets</h1>
 <div class="container">
-  <header class="header">
-    <h1>Cryptocurrency Zone</h1>
-  </header>
-  	<ul>
-</ul>
-  <div class="content">
-    <main class="main">
-	    <hr>
-      <h2>Hot news</h2><hr>
-      
-
-       
-
-
-    </main>
-    <aside class="aside">
-		<hr>
-      <h2>Top 10 Faucets</h2><hr>
-        </aside>
+  <ul class="container__list">
+    <li class="container__item container__item_active">
+      <span class="container__link">Top 5</span>
+    </li>
+    <li class="container__item">
+      <span class="container__link">Hot</span>
+    </li>
+    <li class="container__item">
+      <span class="container__link">CSS</span>
+    </li>
+    <li class="container__item">
+      <span class="container__link">JavaScript</span>
+    </li>
+    <li class="container__item">
+      <span class="container__link">Animation</span>
+    </li>
+  </ul>
+  <div class="container__inner">
+    <h2 class="content__subtitle">Intro</h2>
+    <p class="content__description">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, illum ipsam nesciunt nisi perferendis quisquam repellendus reprehenderit voluptatum? A cupiditate, deleniti doloremque hic iste praesentium quia quidem quisquam sunt vel.
+    </p>
   </div>
-  <footer class="footer">
-    &copy;2021 CCZ.one
-  </footer>
+  <div class="container__inner container__inner_hidden">
+    <h2 class="content__subtitle">HTML</h2>
+    <p class="content__description">
+      The HyperText Markup Language, or HTML(HyperText Markup Language) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
+    </p>
+  </div>
+  <div class="container__inner container__inner_hidden">
+    <h2 class="content__subtitle">CSS</h2>
+    <p class="content__description">
+      Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+    </p>
+  </div>
+  <div class="container__inner container__inner_hidden">
+    <h2 class="content__subtitle">JavaScript</h2>
+    <p class="content__description">
+      JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled and multi-paradigm. It has dynamic typing, prototype-based object-orientation and first-class functions.
+    </p>
+  </div>
+  <div class="container__inner container__inner_hidden">
+    <h2 class="content__subtitle">Animation</h2>
+    <p class="content__description">
+      CSS animations make it possible to animate transitions from one CSS style configuration to another. Animations consist of two components, a style describing the CSS animation and a set of keyframes that indicate the start and end states of the animation’s style, as well as possible intermediate waypoints.
+    </p>
+  </div>
 </div>
-
-</body>
-</html>
