--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
 <div class="container">
   <ul class="container__list">
     <li class="container__item container__item_active">
-      <span class="container__link">Top 5</span>
-    </li>
-    <li class="container__item">
-      <span class="container__link">Hot</span>
-    </li>
-    <li class="container__item">
-      <span class="container__link">CSS</span>
-    </li>
-    <li class="container__item">
-      <span class="container__link">JavaScript</span>
-    </li>
-    <li class="container__item">
-      <span class="container__link">Animation</span>
+      <span class="container__link">Top 5 Crypto Faucets</span>
     </li>
   </ul>
   <div class="container__inner">
