--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<h1 class="title">Best Crypto Faucets</h1>
+<h1 class="title">Top 10 Crypto Faucets</h1>
 <div class="container">
-  <ul class="container__list">
-    <li class="container__item container__item_active">
-      <span class="container__link">Top 5 Crypto Faucets</span>
-    </li>
-  </ul>
   <div class="container__inner">
     <h2 class="content__subtitle">Intro</h2>
     <p class="content__description">
