--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<html>
 <h1 class="title">Top 10 Crypto Faucets</h1>
+<head>
+ <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <div class="container">
   <div class="container__inner">
     <h2 class="content__subtitle">Intro</h2>
@@ -31,3 +36,5 @@
     </p>
   </div>
 </div>
+</body>
+</html>
