--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">1. Final Dutchy</a></h3>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
-	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="480" height="60"><br>  </a>
+	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
     <p>Two 30 minute faucets. PTC, Shortlinks, Task, increased earning with increasing level, staking bonus, faucet with highest number of coins. Withdrawal direct, Faucetpay or Expresscrypto.</p>
     <h3>
 	<a href="https://firefaucet.win/ref/27478">2. Fire Faucet</a></h3>
-    <a href="https://firefau9cet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="580" height="60"><br>  </a>
+    <a href="https://firefau9cet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p>30 minute faucets. PTC, Shortlinks, Daily Task, increased earning with increasing level. Withdrawal direct or Faucetpay. Weekend bonus.</p>
     <h3>
 	<a href="https://faucetcrypto.com/ref/51422">3. FaucetCrypto</a></h3>
-    <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="https://faucetcrypto.com/banners/468x60.gif" width="468" height="60"></a>
+    <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
     <p>25 minute faucets. PTC, Shortlinks, Task, increased earning with increasing level, lower minimum cashout. Withdrawal direct or Faucetpay.</p>
     <h3>
 	<a href="https://simplebits.io/ref/n9Z908pvlxST">4. Simplebits</a></h3>
