--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <h3>
 	<a href="https://simplebits.io/ref/n9Z908pvlxST">4. Simplebits</a></h3>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
-    <img src="https://simplebits.io/banners/400.gif" width="468" height="60"/></a><br>  </a>
+    <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
     <p>30 minute faucets. PTC, Shortlinks, Gamified mining simulation. Earn from mining. Rent hardware to withdraw. Direct withdrawal.</p>
   <h3>
 	<a href="https://pipeflare.io/r/22uo">5. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
-    <img src="https://i.imgur.com/0DjBNTr.jpg" width="468" height="60"/></a><br>  </a>
+    <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
     <p>Matic, ZEC and FLR token. Daily reward. High paying. Social and Brave browser bonus. Direct Payments.</p>
   
 
