--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
   <div class="panel" id="two-panel">
     <h3>Diamond faucets</h3>
     <p>5 minutes. Solvemedia, Hcaptcha. Pays to FaucetPay</p>
-    <h4><a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 Bitcoin</a>&nbsp;&nbsp;&nbsp;
-    <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">7 Ethereum</a>&nbsp;&nbsp;&nbsp;
-    <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">180 Litecoin</a>&nbsp;&nbsp;&nbsp;
-    <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">6 Bitcoincash</a>&nbsp;&nbsp;&nbsp;
+    <h4><a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">Bitcoin</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">Ethereum</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">Litecoin</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">Bitcoincash</a>&nbsp;&nbsp;&nbsp;
+       <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">Dogecoin</a>&nbsp;&nbsp;&nbsp;
+             <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">Dash</a>&nbsp;&nbsp;&nbsp;
+             <a href="https://diamondfaucet.space/trx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">Tron</a>&nbsp;&nbsp;&nbsp;
+             <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">USDT (TRX)</a>&nbsp;&nbsp;&nbsp;
+             <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">Zcash</a>&nbsp;&nbsp;&nbsp;
     </h4>
   </div>
   <div class="panel" id="three-panel">
