--- a/index.html
+++ b/index.html
@@ -22,25 +22,29 @@
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">1. Final Dutchy</a></h3>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
-    <p>Two 30 minute faucets. PTC, Shortlinks, Task, increased earning with increasing level, staking bonus, faucet with highest number of coins. Withdrawal direct, Faucetpay or Expresscrypto.</p>
+    <p></p>
     <h3>
 	<a href="https://firefaucet.win/ref/27478">2. Fire Faucet</a></h3>
     <a href="https://firefau9cet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
-    <p>30 minute faucets. PTC, Shortlinks, Daily Task, increased earning with increasing level. Withdrawal direct or Faucetpay. Weekend bonus.</p>
+    <p></p>
     <h3>
-	<a href="https://faucetcrypto.com/ref/51422">3. FaucetCrypto</a></h3>
+	<a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
+    <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a>
+    <p></p>
+        <h3>
+	<a href="https://faucetcrypto.com/ref/51422">4. FaucetCrypto</a></h3>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
-    <p>25 minute faucets. PTC, Shortlinks, Task, increased earning with increasing level, lower minimum cashout. Withdrawal direct or Faucetpay.</p>
+    <p></p>
     <h3>
-	<a href="https://simplebits.io/ref/n9Z908pvlxST">4. Simplebits</a></h3>
+	<a href="https://simplebits.io/ref/n9Z908pvlxST">6. Simplebits</a></h3>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
-    <p>30 minute faucets. PTC, Shortlinks, Gamified mining simulation. Earn from mining. Rent hardware to withdraw. Direct withdrawal.</p>
+    <p></p>
   <h3>
-	<a href="https://pipeflare.io/r/22uo">5. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">8. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
-    <p>Matic, ZEC and FLR token. Daily reward. High paying. Social and Brave browser bonus. Direct Payments.</p>
+    <p></p>
   
 
   
