--- a/index.html
+++ b/index.html
@@ -35,10 +35,19 @@
 	<a href="https://faucetcrypto.com/ref/51422">4. FaucetCrypto</a></h3>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
     <p></p>
+            <h3>
+	<a href="https://r.adbtc.top/7297">5. Adbtc.top</a></h3>
+    <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
+    <p></p>
     <h3>
 	<a href="https://simplebits.io/ref/n9Z908pvlxST">6. Simplebits</a></h3>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+        <h3>
+	<a href="https://earnbitmoon.club/?ref=145452">7. Earnbitmoon</a></h3>
+	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
+    <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
   <h3>
 	<a href="https://pipeflare.io/r/22uo">8. Pipeflare</a></h3>
