--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     </h4>
   </div>
   <div class="panel" id="three-panel">
-    <h3>Updating</h3>
-    <p>Updating</p>
+    
+    <h4><a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0014 Solana every 5 minute</a>&nbsp;&nbsp;&nbsp;<br>
+      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute</a>&nbsp;&nbsp;&nbsp;<br>
   </div>
   </div>
 </div>
