--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <div class="panel" id="three-panel">
     
     <h4>
-      <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 5 minute</a>&nbsp;&nbsp;&nbsp;<br>
+      <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 5 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       
-      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute</a>&nbsp;&nbsp;&nbsp;<br>
-      <a href="https://fpbch.olefaucet.xyz/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00145 Bitcoincash every 5 minute</a>&nbsp;&nbsp;&nbsp;<br>
+      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a>&nbsp;&nbsp;&nbsp;<br>
+      <a href="https://fpbch.olefaucet.xyz/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00145 Bitcoincash every 5 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
   </div>
   </div>
 </div>
