--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   </div>
   <div class="panel" id="three-panel">
     
-    <h4>
+    <h4> Faucets Paying Directly to Faucetpay
+      <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 5 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       
       <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a>&nbsp;&nbsp;&nbsp;<br>
