--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
   </div>
   <div class="panel" id="three-panel">
     
-    <h4> Faucets Paying Directly to Faucetpay
+    <h4> Faucets Paying Directly to Faucetpay<br>
       <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 5 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
+       <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       
       <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a>&nbsp;&nbsp;&nbsp;<br>
       <a href="https://fpbch.olefaucet.xyz/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00145 Bitcoincash every 5 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
