--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <title>Best Crypto Faucets List</title>
   <link rel="stylesheet" href="styles.css">
   <base target="_blank">
 </head>
