--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     
     <h4> Faucets Paying Directly to Faucetpay<br>
       <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
+      <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00145 Tron every 3 minute - Olefaucet 2</a>&nbsp;&nbsp;&nbsp;<br>
       <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
        <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       <a href="https://fpdash.olefaucet.xyz/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00145 Dash every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
