--- a/index.html
+++ b/index.html
@@ -28,26 +28,30 @@
 	<a href="https://bitcoincyclone.com/?r=3177">2. Bitcoin Cyclone</a></h3>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/bc1.gif" width="468" height="60"></a>
     <p></p>
+                    <h3>
+	<a href="https://coinpot.in/?r=135650">2. Bitcoin Cyclone</a></h3>
+    <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot.png" width="468" height="60"></a>
+    <p></p>
     <h3>
-	<a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
+	<a href="https://coinpayz.xyz/?r=155318">4. Coinpayz</a></h3>
     <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a>
     <p></p>
         <h3>
-	<a href="https://faucetcrypto.com/ref/51422">4. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">5. FaucetCrypto</a></h3>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
     <p></p>
                <h3>
-	<a href="https://firefaucet.win/ref/27478">5. Fire Faucet</a></h3>
+	<a href="https://firefaucet.win/ref/27478">6. Fire Faucet</a></h3>
     <a href="https://firefau9cet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p>
 
     <h3>
-	<a href="https://simplebits.io/ref/n9Z908pvlxST">6. Simplebits</a></h3>
+	<a href="https://simplebits.io/ref/n9Z908pvlxST">7. Simplebits</a></h3>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
         <h3>
-	<a href="https://earnbitmoon.club/?ref=145452">7. Earnbitmoon</a></h3>
+	<a href="https://earnbitmoon.club/?ref=145452">8. Earnbitmoon</a></h3>
 	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
     <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
