--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/bc1.gif" width="468" height="60"></a>
     <p></p>
                     <h3>
-	<a href="https://coinpot.in/?r=135650">2. Bitcoin Cyclone</a></h3>
+	<a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot.png" width="468" height="60"></a>
     <p></p>
     <h3>
