--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
   <div class="panel" id="two-panel">
     <h4>
-      
+      <a href="https://freesolana.co.in/?r=29789">$0.00065 Solana - Free Solana 5 min</a><br>
     <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00027 Ethereum - Diamond Faucet 5 mins</a><br>
     <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
     <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
