--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   <div class="panels">
   <div class="panel" id="one-panel">
-    <h4><font color=red>Daily Updated List of Faucets.</font></h4>
+    <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     <h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">1. Final Dutchy</a></h3>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
