--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <title>Best Crypto Faucets List</title>
+  <meta name="keywords" content="Best, crypto, faucet, earn, money, online, list, 2022">
   <link rel="stylesheet" href="styles.css">
   <base target="_blank">
 </head>
