--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p></p>
                 <h3>
 	<a href="https://bitcoincyclone.com/?r=3177">2. Bitcoin Cyclone</a></h3>
-    <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/bc1.gif" width="468" height="60"></a>
+    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
     <p></p>
                     <h3>
 	<a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
