--- a/index.html
+++ b/index.html
@@ -71,16 +71,22 @@
   </div>
   <div class="panel" id="two-panel">
     <h4>
-      <a href="https://freesolana.co.in/?r=29789">$0.00065 Solana - Free Solana 5 min</a><br>
-    <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00027 Ethereum - Diamond Faucet 5 mins</a><br>
+     Litecoin FaucetPay<br>
     <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
+      Bitcoincash FaucetPay<br>
     <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
+      Dogecoin FaucetPay<br>
        <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.00027 Dogecoin - Diamond Faucet 5 mins</a><br>
        <a href="https://coinsearns.com?r=saroj433@gmail.com">$0.00029 Dogecoin - Coinsearn 5 mins</a><br>
+      Dash FaucetPay<br>
              <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00027 Dash - Diamond Faucet 5 mins</a><br>
+      Tron FaucetPay<br>
              <a href="https://diamondfaucet.space/trx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 Tron - Diamond Faucet 5 mins</a><br>
+      USDT (TRX) FaucetPay
              <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 USDT (TRX) - Diamond Faucet 5 mins</a><br>
+      Zcash Faucetpay<br>
              <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.00027 Zcash - Diamond Faucet 5 mins</a><br>
+      Bitcoin FaucetPay<br>
       <a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">$0.00027 Bitcoin - Diamond Faucet Once a day</a><br>
          
       
