--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       Zcash Faucetpay<br>
              <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.00027 Zcash - Diamond Faucet 5 mins</a><br>
       Bitcoin FaucetPay<br>
-      <a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">$0.00027 Bitcoin - Diamond Faucet Once a day</a><br>
+      <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Fautsy 10 mins</a><br>
+      <a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Diamond Faucet Once a day</a><br>
          
       
     </h4>
