--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
     <h4>
      Litecoin FaucetPay<br>
     <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
+       <a href="https://konstantinova.net/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Konstantinova 7 mins</a><br>
       Bitcoincash FaucetPay<br>
     <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
       Dogecoin FaucetPay<br>
        <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.00027 Dogecoin - Diamond Faucet 5 mins</a><br>
        <a href="https://coinsearns.com?r=saroj433@gmail.com">$0.00029 Dogecoin - Coinsearn 5 mins</a><br>
+      <a href="https://konstantinova.net/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0002 Dogecoin - Konstantinova 7 mins</a><br>
       Dash FaucetPay<br>
              <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00027 Dash - Diamond Faucet 5 mins</a><br>
       Tron FaucetPay<br>
