--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
       <a href="https://konstantinova.net/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0002 Dogecoin - Konstantinova 7 mins</a><br>
       Dash FaucetPay<br>
              <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00027 Dash - Diamond Faucet 5 mins</a><br>
+      <a href="https://konstantinova.net/dashcoin/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.0002 Dash - Konstantinova 7 mins</a><br>
       Tron FaucetPay<br>
              <a href="https://diamondfaucet.space/trx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 Tron - Diamond Faucet 5 mins</a><br>
-      USDT (TRX) FaucetPay
+      USDT (TRX) FaucetPay<br>
              <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 USDT (TRX) - Diamond Faucet 5 mins</a><br>
       Zcash Faucetpay<br>
              <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.00027 Zcash - Diamond Faucet 5 mins</a><br>
