--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
              <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.00027 Zcash - Diamond Faucet 5 mins</a><br>
          <a href="https://konstantinova.net/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.0002 Zcash - Konstantinova 7 mins</a><br>
       
+       Digibyte Faucetpay<br>
+         <a href="https://konstantinova.net/digibyte/?r=DPZNtGxt96i6hzLDentHrmjXftUyjbe7EQ">$0.0002 Digibyte - Konstantinova 7 mins</a><br>
+      
       Bitcoin FaucetPay<br>
       <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Fautsy 10 mins</a><br>
       <a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Diamond Faucet Once a day</a><br>
