--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
              <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 USDT (TRX) - Diamond Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/tron/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0002 Tron - Konstantinova 7 mins</a><br>
       
+      BNB (BEP20) Faucetpay<br>
+         <a href="https://konstantinova.net/binance/?r=0x06b7c06f3693aD2f809e864a4D9D38D36e7AD1F6">$0.0002 BNB - Konstantinova 7 mins</a><br>
+      
       Zcash Faucetpay<br>
              <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.00027 Zcash - Diamond Faucet 5 mins</a><br>
          <a href="https://konstantinova.net/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij">$0.0002 Zcash - Konstantinova 7 mins</a><br>
