--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       
       USDT (TRX) FaucetPay<br>
              <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 USDT (TRX) - Diamond Faucet 5 mins</a><br>
-      <a href="https://konstantinova.net/tron/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0002 Tron - Konstantinova 7 mins</a><br>
+      <a href="https://konstantinova.net/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0002 USDT - Konstantinova 7 mins</a><br>
       
       BNB (BEP20) Faucetpay<br>
          <a href="https://konstantinova.net/binance/?r=0x06b7c06f3693aD2f809e864a4D9D38D36e7AD1F6">$0.0002 BNB - Konstantinova 7 mins</a><br>
