--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       Bitcoin FaucetPay<br>
       <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Fautsy 10 mins</a><br>
       <a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Diamond Faucet Once a day</a><br>
+      <a href="https://herafaucet.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Hera Faucet Once a day</a><br>
          
       
     </h4>
