--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       
      <br> Bitcoincash FaucetPay<br>
     <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
+      <a href="https://herafaucet.top/bitcoin-cash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.0002 Bitcoincash - Hera Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/bitcoincash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.0002 Bitcoincash - Konstantinova 7 mins</a><br>
       
          <br> 
