--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       
 <br>Dash FaucetPay<br>
              <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00027 Dash - Diamond Faucet 5 mins</a><br>
+      <a href="https://herafaucet.top/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.0002 Dash - Hera Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/dashcoin/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.0002 Dash - Konstantinova 7 mins</a><br>
       
      <br> Tron FaucetPay<br>
