--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   
   </div>
   <div class="panel" id="two-panel">
+     <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     <h4>
      Litecoin FaucetPay<br>
     <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
@@ -124,7 +125,7 @@
     </h4>
   </div>
   <div class="panel" id="three-panel">
-    
+     <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     <h4> Faucets Paying Directly to Faucetpay<br>
       <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br>
       <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00145 Tron every 3 minute - Olefaucet 2</a>&nbsp;&nbsp;&nbsp;<br>
