--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       <a href="https://konstantinova.net/dashcoin/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.0002 Dash - Konstantinova 7 mins</a><br>
       
      <br> Tron FaucetPay<br>
+      <a href="https://bitcoincuba.net/freetrx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00045+ Tron - Bitcoincuba Faucet 1 min</a><br>
              <a href="https://diamondfaucet.space/trx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 Tron - Diamond Faucet 5 mins</a><br>
       
      <br> USDT (TRX) FaucetPay<br>
