--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       
          <br> 
      Ethereum FaucetPay<br>
-    <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00027 Ethereum - Diamond Faucet 5 mins</a><br>
+    <a href="https://bitcoincuba.net/freeeth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00045+ Ethereum - Bitcoincuba Faucet 1 min</a><br>
+      <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00027 Ethereum - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/ethereum/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.0002 Ethereum - Hera Faucet 5 mins</a><br>
 
       
