--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       
       
     <br>  Dogecoin FaucetPay<br>
+      <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.00045+ Dogecoin - Diamond Faucet 5 mins</a><br>
        <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.00027 Dogecoin - Diamond Faucet 5 mins</a><br>
        <a href="https://coinsearns.com?r=saroj433@gmail.com">$0.00029 Dogecoin - Coinsearn 5 mins</a><br>
       <a href="https://herafaucet.top/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0002 Dogecoin - Hera Faucet 5 mins</a><br>
