--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     <h4>
      Litecoin FaucetPay<br>
-    <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
+    <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00045+ Litecoin - Bitcoincuba Faucet 1 min</a><br>
+      <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Hera Faucet 5 mins</a><br>
        <a href="https://konstantinova.net/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Konstantinova 7 mins</a><br>
       
