--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       <a href="https://konstantinova.net/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0002 Dogecoin - Konstantinova 7 mins</a><br>
       
 <br>Dash FaucetPay<br>
-             <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00027 Dash - Diamond Faucet 5 mins</a><br>
+             <a href="https://bitcoincuba.net/freedash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00045+ Dash - Bitcoincuba Faucet 1 min</a><br>
+      <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00027 Dash - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.0002 Dash - Hera Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/dashcoin/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.0002 Dash - Konstantinova 7 mins</a><br>
       
