--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
        <a href="https://coinsearns.com?r=saroj433@gmail.com">$0.00029 Dogecoin - Coinsearn 5 mins</a><br>
       <a href="https://herafaucet.top/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0002 Dogecoin - Hera Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0002 Dogecoin - Konstantinova 7 mins</a><br>
+      <a href="https://digitask.ru/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.00006 Dogecoin - Digitask No captcha no timer</a><br>
       
 <br>Dash FaucetPay<br>
              <a href="https://bitcoincuba.net/freedash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00045+ Dash - Bitcoincuba Faucet 1 min</a><br>
