--- a/index.html
+++ b/index.html
@@ -51,18 +51,33 @@
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
+       <h3>
+	<a href="https://viefaucet.com/?r=104124">8. Vie Faucet</a></h3>
+	<a target="_blank" href="https://viefaucet.com/?r=104124" >
+    <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
+           <h3>
+	<a href="https://claimbits.net/?ref=167319">9. Claimbits</a></h3>
+	<a target="_blank" href="https://claimbits.net/?ref=167319" >
+    <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+         <h3>
+	<a href="https://cryptowin.io/ref/tsaroz">10. Cryptowin</a></h3>
+	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
+    <img src="/file/cwin1.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
         <h3>
-	<a href="https://earnbitmoon.club/?ref=145452">8. Earnbitmoon</a></h3>
+	<a href="https://earnbitmoon.club/?ref=145452">12. Earnbitmoon</a></h3>
 	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
     <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
   <h3>
-	<a href="https://pipeflare.io/r/22uo">9. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">13. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
     <p></p>
               <h3>
-	<a href="https://r.adbtc.top/7297">10. Adbtc.top</a></h3>
+	<a href="https://r.adbtc.top/7297">14. Adbtc.top</a></h3>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
     <p></p>
   
