--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
   <div class="panel" id="three-panel">
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     <h4> Solana FaucetPay<br>
-        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 every 1 minute - Litefaucet</a><br>
-      <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 every 3 minute - Olefaucet</a><br>
-      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 every 1 minute - Extra Crypto</a><br>
-      
+        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
+      <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a><br>
+      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a><br>
+      <br>
       <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Claimcoins</a><br>
       <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a><br>
       <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00145 Tron every 3 minute - Olefaucet 2</a>&nbsp;&nbsp;&nbsp;<br>
