--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
     <img src="/file/cwin1.png" width="468" height="60"/></a><br>  </a>
     <p></p>
+          <h3>
+	<a href="https://criptoly.com/ref/35156">11. Criptoly</a></h3>
+	<a target="_blank" href="https://criptoly.com/ref/35156" >
+    <img src="/file/Criptoly.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
         <h3>
 	<a href="https://earnbitmoon.club/?ref=145452">12. Earnbitmoon</a></h3>
 	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
