--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p></p>
                     <h3>
 	<a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
-    <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot.gif" width="468" height="60"></a>
+    <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
     <p></p>
     <h3>
 	<a href="https://coinpayz.xyz/?r=155318">4. Coinpayz</a></h3>
