--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
        <h3>
+	<a href="https://simplebits.io/ref/n9Z908pvlxST">7. Simplebits</a></h3>
+	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
+    <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+       <h3>
 	<a href="https://viefaucet.com/?r=104124">8. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
@@ -82,7 +87,11 @@
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
     <p></p>
               <h3>
-	<a href="https://r.adbtc.top/7297">14. Adbtc.top</a></h3>
+	<a href="https://adsbitly.com/?r=7572">14. Adsbitly</a></h3>
+    <a target="_blank" href="https://adsbitly.com/?r=7572"><img src="/file/adb.png" width="468" height="60"></a>
+    <p></p>
+ <h3>
+	<a href="https://r.adbtc.top/7297">15. Adbtc.top</a></h3>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
     <p></p>
   
