--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <h4> Solana FaucetPay<br>
         <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
       <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a><br>
+      <a href="https://faucet.mhabcoin.online/sol/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0012 Solana every 2 mins - Mhab coin</a><br>
       <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a><br>
       <br>
       <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Claimcoins</a><br>
