--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
     <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/bitcoin-cash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.0002 Bitcoincash - Hera Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/bitcoincash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.0002 Bitcoincash - Konstantinova 7 mins</a><br>
+      <a href="https://bagi.co.in/bitcoincash/?ref=18941">100 Bitcoincash - Bagi Faucet 60 mins</a><br>
+          <a href="https://keran.co/BCH/?ref=54683">100 Bitcoincash - Keran Faucet 60 mins</a><br>
       
          <br> 
      Ethereum FaucetPay<br>
