--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
       <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Hera Faucet 5 mins</a><br>
        <a href="https://konstantinova.net/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Konstantinova 7 mins</a><br>
+       <a href="https://bagi.co.in/litecoin/?ref=77258">300 Litecoin - Bagi Faucet 60 mins</a><br>
+         <a href="https://keran.co/LTC/?ref=106490">300 Litecoin - Bagi Faucet 60 mins</a><br>
       
      <br> Bitcoincash FaucetPay<br>
     <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
